<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city">City</string>
    <string name="location">Current Location</string>
    <string name="search_location">Search Location</string>
    <string name="weatherpicture">WeatherPicture</string>
    <string name="max_temp">Max Temp:</string>
    <string name="min_temp">Min Temp:</string>
    <string name="no_city_found">No City found</string>
    <string name="no_location">Cannot get location</string>
    <string name="no_match">No matching address found for</string>
    <string name="no_response_meteo">Could not receive Data from Open-Meteo</string>
    <string name="change_language">Change Language</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="please_fill_field">Please enter a city</string>
    <string name="humidityLabel">Humidity:</string>
    <string name="windLabel">Wind speed:</string>
    <string name="north">N</string>
    <string name="north_east">NE</string>
    <string name="east">E</string>
    <string name="south_east">SE</string>
    <string name="south">S</string>
    <string name="south_west">SW</string>
    <string name="west">W</string>
    <string name="north_west">NW</string>

</resources>