<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/Language_Setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_language" />

        <EditText
            android:id="@+id/City_input"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:autofillHints="@string/city"
            android:hint="@string/city"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <Button
            android:id="@+id/searchLocationButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/search_location" />

        <Button
            android:id="@+id/currentLocationButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/location" />
        <ProgressBar
            android:id="@+id/loading_view"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weatherpicture" />

        <TextView
            android:id="@+id/showCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp" />

        <LinearLayout
            android:id="@+id/showTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/maxTempLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/minTempLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/min_temp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
        android:id="@+id/showExtra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/humidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidityLabel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/windLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/windLabel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>